src/css/custom.css
/* ... */
.footer__title {
  font-family: "CCSmash";
  text-decoration: underline;
}

.footer__logo {
  aspect-ratio: 473 / 247;
  width: 13rem;
  margin-top: 0;
}

/*#endregion Footer*/


/*#region Media Queries*/

@media screen and (max-width: 498px) {
  .navbar__search-input {
    width: 2.5rem !important;
    height: 2.5rem !important;
    border-radius: 50%;
    background: #134900 var(--ifm-navbar-search-input-icon) no-repeat center / 1rem 1rem !important;
  }
}

@media screen and (max-width: 600px) {
  .jttCard1, .jttCard2 {
    grid-row-start: unset;
  }
}

@media screen and (max-width: 996px) {

  .homeBg .ytvContainerInner.orange {
    border: none;
    border-radius: 0px;
    padding: 1rem;
    box-shadow: none;
  }

  .navbar--fixed-top {
    height: 5rem;
  }

  .navbar__inner {
    height: 5rem;
    top: 0rem;
  }

  .navbar__brand {
    min-width: calc(100vw - (12vw + 38px));
    justify-content: center;
    margin-left: 0vw;
    padding: 0;
  }

  .navbar__logo {
    display: flex;
    align-items: center;
  }

  .navbar__logo img {
    width: 7rem;
  } 

  .navbar__search-input {
    height: 2.5rem !important;
    width: 10rem;
  }

  .wiki-parent {
    flex-direction: column;
  }

  .wiki-content-col {
    order: 2;
    max-width: 100% !important;
  }

  .wiki-infobox-col {
    order: 1;
    padding: 2rem 0;
    max-width: 100% !important;
  } 
}

@media screen and (max-width: 1058px) {
  /* .navbar__inner {
    font-size: 1.1rem;
  } */
}

@media screen and (min-width: 2000px) {

  .navbar--fixed-top {
    height: 7rem;
  }

  .navbar__inner {
    height: 3rem;
    top: 4rem;
    font-size: 1.25rem;
  }

  .navbar__logo img {
    width: 18rem;
  }

  .navbar__items--right {
    scale: 1.25;
  }

  .sm {
    --ifm-button-size-multiplier: 1 !important;
  }

  .lg {
    --ifm-button-size-multiplier: 1.25 !important;
  }

  .sidebarViewport_aRkj {
    margin-top: 2rem;
  }

  .docSidebarContainer_YfHR {
    --ifm-navbar-height: 10rem !important;
    --doc-sidebar-width: 320px !important;
    font-size: 1.25rem;
  }

  .menu__link {
    line-height: 1.75;
  }

  .footer__title {
    font-size: 1.25rem;
  }

  .social__links a {
    margin: 0px 1.5rem;
    font-size: 2.5em;
  }

  .footer__links {
    font-size: 1.25rem;
  }

  .footer__logo {
    width: 14rem;
    margin-top: 0;
  }

  .footer__copyright {
    font-size: 1.25rem;
  }
}

@media screen and (min-width: 4000px) {
  .ytvContainer {
    border-radius: 50px !important;
    padding: 2.5rem 1.75rem 2.25rem 1.75rem !important;
  }

  .ytvContainerInner {
    border: 0.4rem solid black;
    border-radius: 50px;
    box-shadow: 0px 1.3rem 0.5rem inset rgb(0, 0, 0, 0.3);
    padding: 2rem 2rem;
  }

  .navbar--fixed-top {
    height: 9rem;
  }

  .navbar__inner {
    height: 4rem;
    top: 5rem;
    font-size: 1.75rem;
  }

  .navbar__logo img {
    width: 24rem;
  }

  .navbar__items--right {
    scale: 1.5;
  }

  .navbar__search {
    font-size: 1.25rem
  }

  .dropdown__link {
    font-size: 1.75rem;
  } 
    
  .button, .button--flat {
    --ifm-button-size-multiplier: 2;
    outline: 6px solid black;
  }

  .button:focus {
    outline: 6px solid black !important;
  }

  .lg {
    --ifm-button-size-multiplier: 2 !important;
  }

  li::marker {
    font-size: unset !important;
  }

  .sidebarViewport_aRkj {
    margin-top: 3.5rem;
  }

  .docSidebarContainer_YfHR {
    --ifm-navbar-height: 14rem !important;
    --doc-sidebar-width: 500px !important;
    font-size: 1.5rem;
  }

  .menu__link {
    line-height: 2;
  }

  .menu__caret::before,
  .menu__link--sublist-caret::after {
    background: var(--ifm-menu-link-sublist-icon) 50% / 3rem 3rem;
    width: 1.5rem !important;
    height: 1.5rem !important;
  }

  .wiki-content-col {
    max-width: calc(7 / 12 * 100%) !important;
  }
  
  .wiki-infobox-col {
    display: flex;
    order: 2;
    max-width: calc(4 / 12 * 100%) !important;
  }
    
  .footer__title {
    font-size: 1.75rem;
  }

  .social__links a {
    margin: 0px 2rem;
    font-size: 3em;
  }

  .footer__links {
    font-size: 1.5rem;
  }

  .footer__logo {
    width: 20rem;
    margin-top: 0;
  }

  .footer__copyright {
    font-size: 1.75rem;
  }
}

/*#endregion Media Queries*/

